# mog-pod-bot

./: pyproject.toml
mog_pod_bot/: main.py  mogpodbot.service
mog_pod_bot/modules/: schedule.py  searcher.py
